--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
-  backend:
+  frontend:
     image: nomsodwann/234-deploylab-frontend:latest
     ports:
-      - "8086:80"
+    - "8086:80"
